Add words to the dictionary.

--- a/DictBot/Tests/packages.config
+++ b/DictBot/Tests/packages.config
@@ -5,6 +5,11 @@
   <package id="FSharp.Core" version="4.2.3" targetFramework="net46" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="mongocsharpdriver" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.FSharp" version="0.1.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net46" />
   <package id="NUnit" version="3.8.1" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net46" />
