--- a/DictBot/Tests/Tests.csproj
+++ b/DictBot/Tests/Tests.csproj
@@ -126,14 +126,13 @@
     <Compile Include="Integration\BotTests.cs" />
     <Compile Include="Integration\LanguageServicesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit\BotTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Unit\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.fsproj">
       <Project>{717392f1-095b-4042-ac52-345b17a92554}</Project>
