--- a/DictBot/Core/Core.fsproj
+++ b/DictBot/Core/Core.fsproj
@@ -54,9 +54,11 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Domain.fs" />
     <Compile Include="DataUtils.fs" />
+    <Compile Include="Data.fs" />
     <Compile Include="RequestPerser.fs" />
     <Compile Include="Bot.fs" />
     <Content Include="packages.config" />
+    <Compile Include="Async.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson">
